--- a/TP_Comanda/src/app/pages/game/id/id.page.html
+++ b/TP_Comanda/src/app/pages/game/id/id.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar color="medium">
-    <ion-back-button (click)="return()" slot="start"></ion-back-button>
+    <ion-back-button (click)="redirectTo('home')" slot="start"></ion-back-button>
     <ion-title>Piedra Papel o Tijera</ion-title>
   </ion-toolbar>
 </ion-header>
