--- a/TP_Comanda/src/app/pages/producto/list/list.page.html
+++ b/TP_Comanda/src/app/pages/producto/list/list.page.html
@@ -1,10 +1,9 @@
 <ion-header>
   <ion-toolbar>
     
-    <ion-back-button (click)="navigateBack()" slot="start"></ion-back-button>
+    <ion-back-button (click)="redirectTo('home')" slot="start"></ion-back-button>
     <ion-title size="small">Listado de Productos</ion-title>
-    <ion-icon slot="end" name="qr-code-outline" (click)="ScanQr()" style="font-size: 2em; margin-right: 0.5em;"></ion-icon>
-  
+ 
   </ion-toolbar>
 </ion-header>
 
