--- a/TP_Comanda/src/app/pages/chat/chat.page.html
+++ b/TP_Comanda/src/app/pages/chat/chat.page.html
@@ -14,12 +14,12 @@
            
           <div class="row m-1" >
             <div class="col">
-              <div class="alert alert-success p-1 text-end" *ngIf="mje.uid == uid">
+              <div class="alert alert-success p-1 text-end"  >
                 <p class="mb-0"><small>{{mje.fecha | date:'short'  }}</small></p>
                 <p class="mb-0"> {{mje.message}}</p> 
               </div>
     
-              <div class="alert alert-secondary p-1" *ngIf="mje.uid != uid">
+              <div class="alert alert-secondary p-1"  >
                 <p class="mb-0"><strong>{{mje.userName}}({{mje.rol}}): </strong><small>{{mje.fecha | date:'short'}}</small></p>
                 <p class="mb-0"> {{mje.message}}</p>
               </div>
